# project-hearth

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: chat.py  conversations.py  documents.py  models_api.py  notes.py  search.py  settings.py  system.py
backend/app/core/: chunking.py  pii.py
backend/app/models/: embedding_model.py  manager.py  ner_model.py  trocr_model.py  whisper_model.py
backend/app/pipeline/: ingest_workflow.py  orchestrator.py
backend/app/providers/: __init__.py  base.py  ollama.py  openai_compat.py  registry.py
backend/app/storage/: database.py  file_store.py  repository.py
backend/tests/: conftest.py  test_api.py  test_core.py  test_ingest.py  test_models.py  test_storage.py
data/: hearth.db
hearth/: .env.example  Dockerfile.backend  Dockerfile.frontend  nginx.conf  pyproject.toml  requirements.txt
hearth/app/: config.py  main.py
hearth/app/api/: chat.py  conversations.py  documents.py  models_api.py  notes.py  schemas.py  search.py  settings.py  system.py
hearth/app/core/: chunking.py  pii.py
hearth/app/models/: embedding_model.py  manager.py  trocr_model.py  whisper_model.py
hearth/app/pipeline/: ingest_workflow.py  orchestrator.py
hearth/app/providers/: base.py  local_llm.py  ollama.py  openai_compat.py  registry.py
hearth/app/services/: conversations.py  documents.py  notes.py
hearth/app/storage/: database.py  file_store.py  repository.py  schema.py
hearth/app/storage/repos/: _shared.py  chunks.py  conversations.py  documents.py  messages.py  notes.py  settings.py
hearth/scripts/: dev.ps1  dev.sh  start.ps1  start.sh
hearth/static/frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
hearth/tests/: conftest.py  test_api.py  test_core.py  test_ingest.py  test_journeys.py  test_models.py  test_storage.py
hearth/tests/e2e/: __init__.py  sample_content.py
(+131 files in other folders)
