[project]
name = "hearth"
version = "0.1.0"
description = "Fully offline, on-device notes & research assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlite-vec>=0.1.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.0.0",
    "aiosqlite>=0.20.0",
]
[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "pytest-cov>=5.0.0", "httpx>=0.28.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
