[project]
name = "hearth"
version = "0.1.0"
description = "Fully offline, on-device notes & research assistant"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "sqlite-vec>=0.1.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
]
[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "pytest-cov>=5.0.0", "httpx>=0.28.0", "ruff>=0.7.0", "mypy>=1.13.0"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".venv", "migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4", "T20"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T20"]
"app/providers/base.py" = ["ARG"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
exclude = [".venv/", "migrations/"]
warn_unused_ignores = true
no_implicit_optional = true
warn_redundant_casts = true
check_untyped_defs = true
